cleanup add missing libs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -80,6 +80,39 @@
         "WEEKLY_REWARDS_IMPROVE_ITEM_LEVEL",
         "GREEN_FONT_COLOR",
         "WEEKLY_REWARDS_COMPLETE_RAID",
-        "DetailsFramework"
+        "DetailsFramework",
+        "AUCTION_CATEGORY_ITEM_ENHANCEMENT",
+        "AUCTION_CATEGORY_GEMS",
+        "AUCTION_CATEGORY_CONSUMABLES",
+        "AUCTION_CATEGORY_TRADE_GOODS",
+        "AUCTION_CATEGORY_WEAPONS",
+        "AUCTION_SUBCATEGORY_RANGED",
+        "ITEM_QUALITY_COLORS",
+        "CooldownFrame_Set",
+        "UISpecialFrames",
+        "UnitAura",
+        "HelpPlate_Show",
+        "HelpPlate_Hide",
+        "HelpPlate_IsShowing",
+        "GetItemStats",
+        "ColorPickerFrame",
+        "InterfaceOptionsFrame_OpenToCategory",
+        "DEFAULT_CHAT_FRAME",
+        "ChatFrame1",
+        "ExportUtil",
+        "PlayerUtil",
+        "MAX_TALENT_TABS",
+        "SettingsPanel",
+        "AnimateTexCoords",
+        "FauxScrollFrame_Update",
+        "FauxScrollFrame_OnVerticalScroll",
+        "FauxScrollFrame_GetOffset",
+        "OpacitySliderFrame",
+        "FauxScrollFrame_SetOffset",
+        "ALTERNATE_POWER_INDEX",
+        "FAILED",
+        "INTERRUPTED",
+        "MouseIsOver",
+        "LE_PARTY_CATEGORY_INSTANCE"
     ]
 }
