add project ids

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -123,7 +123,138 @@
         "WeeklyRewardsFrame",
         "ClassTalentFrame_LoadUI",
         "ClassTalentFrame",
-        "ClassTalentImportExportMixin"
+        "ClassTalentImportExportMixin",
+        "UIParent",
+        "C_UI",
+        "C_Texture",
+        "UnitName",
+        "C_AddOns",
+        "C_Timer",
+        "CreateFrame",
+        "time",
+        "GetCurrentRegion",
+        "GetQuestResetTime",
+        "date",
+        "UnitLevel",
+        "C_WeeklyRewards",
+        "Enum",
+        "geterrorhandler",
+        "IsLoggedIn",
+        "GetRealmName",
+        "UnitClass",
+        "UnitRace",
+        "UnitFactionGroup",
+        "GetCurrentRegionName",
+        "GetLocale",
+        "securecallfunction",
+        "GetPhysicalScreenSize",
+        "Round",
+        "ClampedPercentageBetween",
+        "Lerp",
+        "UnitGUID",
+        "GameTooltip",
+        "tremove",
+        "strsplit",
+        "InCombatLockdown",
+        "PixelUtil",
+        "GetTime",
+        "GetCursorPosition",
+        "wipe",
+        "debugstack",
+        "Clamp",
+        "GetScreenHeight",
+        "C_SpellBook",
+        "GetSpellBaseCooldown",
+        "GetScreenWidth",
+        "StopSound",
+        "PlaySoundFile",
+        "max",
+        "WOW_PROJECT_ID",
+        "WOW_PROJECT_MAINLINE",
+        "WOW_PROJECT_CLASSIC",
+        "UnitCastingInfo",
+        "UnitChannelInfo",
+        "C_NamePlate",
+        "floor",
+        "UnitPlayerControlled",
+        "UnitIsTapDenied",
+        "GetBuildInfo",
+        "Mixin",
+        "EJ_GetInstanceForMap",
+        "EJ_GetInstanceInfo",
+        "EJ_SelectInstance",
+        "EJ_GetEncounterInfoByIndex",
+        "EJ_GetEncounterInfo",
+        "EJ_SelectEncounter",
+        "EJ_GetCreatureInfo",
+        "EJ_SetDifficulty",
+        "EJ_GetNumLoot",
+        "RAID_CLASS_COLORS",
+        "Saturate",
+        "GetSpecialization",
+        "GetSpecializationInfoByID",
+        "GetSpecializationInfo",
+        "GetSpecializationRole",
+        "debugprofilestop",
+        "format",
+        "IsInRaid",
+        "GetNumGroupMembers",
+        "IsInGroup",
+        "strsub",
+        "C_ClassTalents",
+        "BackdropTemplateMixin",
+        "C_Traits",
+        "UnitGroupRolesAssigned",
+        "ceil",
+        "CreateColor",
+        "min",
+        "CreateFromMixins",
+        "C_CreatureInfo",
+        "strbyte",
+        "C_SpecializationInfo",
+        "GetPvpTalentInfoByID",
+        "UnitIsUnit",
+        "C_AlliedRaces",
+        "GetTalentInfo",
+        "GetFlyoutInfo",
+        "Ambiguate",
+        "GetFlyoutSlotInfo",
+        "abs",
+        "C_Container",
+        "UnitExists",
+        "UnitPosition",
+        "GetLooseMacroItemIcons",
+        "GetLooseMacroIcons",
+        "GetMacroIcons",
+        "GetMacroItemIcons",
+        "IsShiftKeyDown",
+        "IsControlKeyDown",
+        "IsAltKeyDown",
+        "tinsert",
+        "UnitAffectingCombat",
+        "CreateVector2D",
+        "C_EncounterJournal",
+        "UnitHealth",
+        "UnitHealthMax",
+        "UnitGetIncomingHeals",
+        "UnitGetTotalHealAbsorbs",
+        "UnitGetTotalAbsorbs",
+        "UnitPowerMax",
+        "UnitPower",
+        "UnitPowerBarID",
+        "GetUnitPowerBarInfoByID",
+        "UnitPowerType",
+        "UnitIsConnected",
+        "PowerBarColor",
+        "UnitSelectionColor",
+        "UnitHasVehicleUI",
+        "UnitIsPlayer",
+        "GetUnitEmpowerHoldAtMaxTime",
+        "UnitDetailedThreatSituation",
+        "UnitIsFriend",
+        "GetUnitEmpowerStageDuration",
+        "GetAverageItemLevel",
+        "C_LFGList"
     ],
     "Lua.diagnostics.disable": [
         "undefined-field",
