--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -271,6 +271,6 @@
         "utf8": "disable"
     },
     "Lua.workspace.library": [
-        "$USERPROFILE\\.vscode\\extensions\\ketho.wow-api-0.15.8\\Annotations"
+        "~\\.vscode\\extensions\\ketho.wow-api-0.16.4\\Annotations"
     ]
 }
