--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,1 @@
-Libs/LibStub/*
-Libs/LibWindow-1.1/*
-Libs/CallbackHandler-1.0/*
-Libs/AceAddon-3.0/*
-Libs/AceEvent-3.0/*
-Libs/AceLocale-3.0/*
-Libs/AceDB-3.0/*
-Libs/DF/*
-Libs/AceAddon-3.0/*
-Libs/Lodash/*
+Libs/*
