Add showvault column

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -142,7 +142,26 @@
         "PowerBarColor",
         "PanelTemplates_TabResize",
         "PanelTemplates_DeselectTab",
-        "PanelTemplates_SelectTab"
+        "PanelTemplates_SelectTab",
+        "WeeklyRewardsMixin",
+        "FrameUtil",
+        "WEEKLY_REWARDS_THRESHOLD_DUNGEONS",
+        "RETRIEVING_ITEM_INFO",
+        "WeeklyRewardsActivityMixin",
+        "GameTooltip_SetTitle",
+        "WEEKLY_REWARDS_CURRENT_REWARD",
+        "GameTooltip_AddErrorLine",
+        "GameTooltip_AddColoredLine",
+        "WEEKLY_REWARDS_MAXED_REWARD",
+        "WeeklyRewardsUtil",
+        "GameTooltip_AddBlankLineToTooltip",
+        "GameTooltip_AddHighlightLine",
+        "WEEKLY_REWARDS_ITEM_LEVEL_HEROIC",
+        "WEEKLY_REWARDS_ITEM_LEVEL_MYTHIC",
+        "WEEKLY_REWARDS_COMPLETE_HEROIC_SHORT",
+        "WEEKLY_REWARDS_COMPLETE_MYTHIC",
+        "WEEKLY_REWARDS_COMPLETE_MYTHIC_SHORT",
+        "WEEKLY_REWARDS_ADD_ITEMS"
     ],
     "Lua.diagnostics.disable": [
         "undefined-field",
