--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -161,7 +161,64 @@
         "WEEKLY_REWARDS_COMPLETE_HEROIC_SHORT",
         "WEEKLY_REWARDS_COMPLETE_MYTHIC",
         "WEEKLY_REWARDS_COMPLETE_MYTHIC_SHORT",
-        "WEEKLY_REWARDS_ADD_ITEMS"
+        "WEEKLY_REWARDS_ADD_ITEMS",
+        "SquareIconButtonMixin",
+        "AuctionHouseBackgroundMixin",
+        "ScrollUtil",
+        "CreateScrollBoxListLinearView",
+        "CreateTableBuilder",
+        "CreateIndexRangeDataProvider",
+        "ScrollBoxListMixin",
+        "AuctionHouseTableBuilderMixin",
+        "BROWSE_NO_RESULTS",
+        "assertsafe",
+        "AUCTION_HOUSE_REFRESH_BUTTON_TOOLTIP",
+        "AUCTION_HOUSE_QUANTITY_AVAILABLE_FORMAT",
+        "TableBuilderRowMixin",
+        "AuctionHouseSortOrderSystemMixin",
+        "AUCTION_HOUSE_BROWSE_FAVORITES_TIP",
+        "AuctionFrame_GetDetailColumnStringUnsafe",
+        "DressUpTransmogLink",
+        "ERR_AUCTION_DATABASE_ERROR",
+        "DressUpBattlePetLink",
+        "DressUpLink",
+        "PROFESSIONS_COLUMN_HEADER_ITEM",
+        "PROFESSIONS_COLUMN_HEADER_TIP",
+        "PROFESSIONS_COLUMN_HEADER_QUALITY",
+        "PROFESSIONS_COLUMN_HEADER_REAGENTS",
+        "AUCTION_HOUSE_BROWSE_HEADER_CONTAINER_SLOTS",
+        "AUCTION_HOUSE_BROWSE_HEADER_REQUIRED_LEVEL",
+        "AUCTION_HOUSE_BROWSE_HEADER_RECIPE_SKILL",
+        "CRAFTING_ORDERS_BROWSE_HEADER_STATUS",
+        "CRAFTING_ORDERS_BROWSE_HEADER_AVG_TIP",
+        "CRAFTING_ORDERS_BROWSE_HEADER_MAX_TIP",
+        "CRAFTING_ORDERS_BROWSE_HEADER_AVAILABLE",
+        "CRAFTING_ORDERS_BROWSE_HEADER_CUSTOMER_NAME",
+        "ProfessionsSortOrder",
+        "EnumUtil",
+        "TableBuilderElementMixin",
+        "AuctionHouseSortOrderState",
+        "AuctionHouseTableHeaderStringMixin",
+        "AuctionHouseTableCellItemKeyMixin",
+        "CreateSimpleTextureMarkup",
+        "TabSystemOwnerMixin",
+        "TALENT_FRAME_TAB_LABEL_SPEC",
+        "TALENT_FRAME_TAB_LABEL_TALENTS",
+        "TALENT_FRAME_TAB_LABEL_SPELLBOOK",
+        "PlayerSpellsUtil",
+        "PlayerSpellsFrameMixin",
+        "Settings",
+        "MinimalSliderWithSteppersMixin",
+        "CreateSettingsListSectionHeaderInitializer",
+        "CreateSettingsCheckboxSliderInitializer",
+        "ENABLE_MOUSE_SPEED",
+        "MOUSE_SENSITIVITY",
+        "OPTION_TOOLTIP_MOUSE_SENSITIVITY",
+        "GreatVaultListFrame",
+        "DevTool",
+        "AuctionHouseSystemMixin",
+        "AuctionHouseBuySystemMixin",
+        "g_auctionHouseSortsBySearchContext"
     ],
     "Lua.diagnostics.disable": [
         "undefined-field",
@@ -180,6 +237,6 @@
         "utf8": "disable"
     },
     "Lua.workspace.library": [
-        "~\\.vscode\\extensions\\ketho.wow-api-0.17.4\\Annotations"
+        "~\\.vscode\\extensions\\ketho.wow-api-0.17.5\\Annotations"
     ]
 }
