tidy up table columns
- add icon cell template for class icons
- add auto width logic in order to reduce size of char name and item level columns

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -221,7 +221,8 @@
         "g_auctionHouseSortsBySearchContext",
         "RAIDS",
         "DUNGEONS",
-        "WORLD"
+        "WORLD",
+        "GetClassAtlas"
     ],
     "Lua.diagnostics.disable": [
         "undefined-field",
