add tabsystem and delves loot tab

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -222,7 +222,8 @@
         "RAIDS",
         "DUNGEONS",
         "WORLD",
-        "GetClassAtlas"
+        "GetClassAtlas",
+        "TabSystemMixin"
     ],
     "Lua.diagnostics.disable": [
         "undefined-field",
