color code itemlvls

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -223,7 +223,15 @@
         "DUNGEONS",
         "WORLD",
         "GetClassAtlas",
-        "TabSystemMixin"
+        "TabSystemMixin",
+        "RETRIEVING_DATA",
+        "TooltipDataProcessor",
+        "INSPECT",
+        "ITEM_LEVEL",
+        "ITEM_LEVEL_ALT",
+        "CLUB_FINDER_PENDING",
+        "InspectFrame",
+        "DUNGEON_SCORE"
     ],
     "Lua.diagnostics.disable": [
         "undefined-field",
