fix blizzard tabSystem width issue

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -233,7 +233,8 @@
         "InspectFrame",
         "DUNGEON_SCORE",
         "Rare",
-        "Add"
+        "Add",
+        "TabSystemButtonMixin"
     ],
     "Lua.diagnostics.disable": [
         "undefined-field",
