--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -235,7 +235,8 @@
         "Rare",
         "Add",
         "TabSystemButtonMixin",
-        "AddonCompartmentFrame"
+        "AddonCompartmentFrame",
+        "DELVES_LABEL"
     ],
     "Lua.diagnostics.disable": [
         "undefined-field",
