--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -249,7 +249,8 @@
         "GetAHFilterName",
         "SearchBoxTemplateClearButton_OnClick",
         "SearchBoxTemplate_OnLoad",
-        "LFG_LIST_NO_RESULTS_FOUND"
+        "LFG_LIST_NO_RESULTS_FOUND",
+        "GreatVaultButtonMixin"
     ],
     "Lua.diagnostics.disable": [
         "undefined-field",
