complete column order settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -253,7 +253,8 @@
         "GreatVaultButtonMixin",
         "PaperDollFrame_UpdateStats",
         "SettingsControlMixin",
-        "CreateFramePool"
+        "CreateFramePool",
+        "SettingsInbound"
     ],
     "Lua.diagnostics.disable": [
         "undefined-field",
