add ELVUI skin support

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -254,7 +254,9 @@
         "PaperDollFrame_UpdateStats",
         "SettingsControlMixin",
         "CreateFramePool",
-        "SettingsInbound"
+        "SettingsInbound",
+        "PlayerSpellsFrame",
+        "GreatVaultListFrameCloseButton"
     ],
     "Lua.diagnostics.disable": [
         "undefined-field",
