--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -263,7 +263,13 @@
         "StaticPopupDialogs",
         "StaticPopup_Show",
         "YES",
-        "NO"
+        "NO",
+        "CopyTable",
+        "GRAY_FONT_COLOR",
+        "WHITE_FONT_COLOR",
+        "FormatPercentage",
+        "RED_FONT_COLOR",
+        "NORMAL_FONT_COLOR"
     ],
     "Lua.diagnostics.disable": [
         "undefined-field",
@@ -282,6 +288,6 @@
         "utf8": "disable"
     },
     "Lua.workspace.library": [
-        "~\\.vscode\\extensions\\ketho.wow-api-0.17.6\\Annotations"
+        "~\\.vscode\\extensions\\ketho.wow-api-0.17.9\\Annotations"
     ]
 }
