--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -291,6 +291,6 @@
         "utf8": "disable"
     },
     "Lua.workspace.library": [
-        "~\\.vscode\\extensions\\ketho.wow-api-0.19.1\\Annotations"
+        "~\\.vscode\\extensions\\ketho.wow-api-0.20.6\\Annotations\\Core"
     ]
 }
