Add remote Great Vault rewards frame and interactions
Introduces WeeklyRewardsRemoteFrame for displaying Great Vault rewards remotely, including new Lua and XML files. Updates TableCell to support clicking and showing the remote frame, modifies data storage to include activities data, and adjusts initialization and window logic. Also updates keystone column to use a utility function and extends VSCode Lua globals for new APIs.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -272,7 +272,61 @@
         "NORMAL_FONT_COLOR",
         "HelpTip",
         "PLAYER_SPELLS_FRAME_MINIMIZE_TIP",
-        "LE_FRAME_TUTORIAL_PLAYER_SPELLS_MINIMIZE"
+        "LE_FRAME_TUTORIAL_PLAYER_SPELLS_MINIMIZE",
+        "WEEKLY_REWARDS_CONFIRM_SELECT",
+        "CANCEL",
+        "RegisterUIPanel",
+        "StaticPopup_Hide",
+        "RaiseFrameLevel",
+        "NineSliceUtil",
+        "SOUNDKIT",
+        "GREAT_VAULT_CLASS_SET_TUTORIAL",
+        "LE_FRAME_TUTORIAL_GREAT_VAULT_CLASS_SETS",
+        "WEEKLY_REWARDS_THRESHOLD_PVP",
+        "WEEKLY_REWARDS_THRESHOLD_WORLD",
+        "GameTooltip_ShowCompareItem",
+        "GameTooltip_HideShoppingTooltips",
+        "HandleModifiedItemClick",
+        "SetItemButtonCount",
+        "SetItemButtonQuality",
+        "LE_EXPANSION_LEVEL_CURRENT",
+        "PVP",
+        "WEEKLY_REWARDS_CHOOSE_REWARD",
+        "WEEKLY_REWARDS_RETURN_TO_CLAIM",
+        "ContinuableContainer",
+        "WEEKLY_REWARDS_ITEM_LEVEL_WORLD",
+        "WEEKLY_REWARDS_MYTHIC_TOP_RUNS",
+        "WEEKLY_REWARDS_ITEM_LEVEL_PVP",
+        "TooltipUtil",
+        "GREAT_VAULT_REWARDS_MYTHIC_INCOMPLETE",
+        "GREAT_VAULT_REWARDS_WORLD_INCOMPLETE",
+        "WEEKLY_REWARDS_HEROIC",
+        "QUESTION_MARK_ICON",
+        "GENERIC_FRACTION_STRING",
+        "WEEKLY_REWARDS_UNLOCK_REWARD",
+        "WEEKLY_REWARDS_COMPLETE_WORLD",
+        "SetItemButtonOverlay",
+        "GREAT_VAULT_RETIRE_WARNING",
+        "GREAT_VAULT_REWARDS_MYTHIC_COMPLETED_FIRST",
+        "GREAT_VAULT_REWARDS_MYTHIC_COMPLETED_SECOND",
+        "GREAT_VAULT_REWARDS_WORLD_COMPLETED_FIRST",
+        "GREAT_VAULT_REWARDS_WORLD_COMPLETED_SECOND",
+        "RAID",
+        "WEEKLY_REWARDS_MYTHIC",
+        "CONQUEST_BRACKET_INDEXES",
+        "WEEKLY_REWARDS_CONCESSION_FORMAT",
+        "GREAT_VAULT_RETIRE_WARNING_FINAL_WEEK",
+        "GREAT_VAULT_WORLD_TIER",
+        "WEEKLY_REWARDS_ENCOUNTER_LIST",
+        "WEEKLY_REWARDS_MYTHIC_RUN_INFO",
+        "WEEKLY_REWARDS_COMPLETE_PVP_MAX",
+        "WEEKLY_REWARDS_COMPLETE_PVP",
+        "WEEKLY_REWARDS_COMPLETED_ENCOUNTER",
+        "DASH_WITH_TEXT",
+        "GREAT_VAULT_REWARDS_CURRENT_LEVEL_HEROIC",
+        "GREAT_VAULT_REWARDS_CURRENT_LEVEL_MYTHIC",
+        "Activities",
+        "WeeklyRewardActivityItemMixin"
     ],
     "Lua.diagnostics.disable": [
         "undefined-field",
