Improve remote vault frame handling and add Readme
Added a Readme.md with feature overview. Improved handling of WeeklyRewardsRemoteFrame: now shows error if data is missing, avoids redundant frame display, and supports BlizzMove for the remote frame. Refactored activitiesData storage to column logic and removed duplicate code. Minor updates to VSCode settings.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -326,7 +326,8 @@
         "GREAT_VAULT_REWARDS_CURRENT_LEVEL_HEROIC",
         "GREAT_VAULT_REWARDS_CURRENT_LEVEL_MYTHIC",
         "Activities",
-        "WeeklyRewardActivityItemMixin"
+        "WeeklyRewardActivityItemMixin",
+        "UIErrorsFrame"
     ],
     "Lua.diagnostics.disable": [
         "undefined-field",
